// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionnairesTable Row should render 1`] = `
<QuestionnairesTable__RowTransition
  exit={true}
  key="1"
  timeout={200}
>
  <QuestionnairesTable__TR
    disabled={false}
  >
    <QuestionnairesTable__TD
      textAlign="left"
    >
      <QuestionnairesTable__Collapsible>
        <TruncatedQuestionnaireLink
          data-test="anchor-questionnaire-title"
          disabled={false}
          questionnaire={
            Object {
              "createdAt": "2017/01/02",
              "createdBy": Object {
                "name": "Alan",
              },
              "id": "1",
              "sections": Array [
                Object {
                  "id": "1",
                  "pages": Array [
                    Object {
                      "id": "1",
                    },
                  ],
                },
              ],
              "title": "Foo",
            }
          }
          title="Foo"
        >
          Foo
        </TruncatedQuestionnaireLink>
      </QuestionnairesTable__Collapsible>
    </QuestionnairesTable__TD>
    <QuestionnairesTable__TD
      textAlign="left"
    >
      <QuestionnairesTable__Collapsible>
        <FormattedDate
          date="2017/01/02"
        />
      </QuestionnairesTable__Collapsible>
    </QuestionnairesTable__TD>
    <QuestionnairesTable__TD
      textAlign="left"
    >
      <QuestionnairesTable__Collapsible>
        <Truncated>
          Alan
        </Truncated>
      </QuestionnairesTable__Collapsible>
    </QuestionnairesTable__TD>
    <QuestionnairesTable__TD
      textAlign="center"
    >
      <QuestionnairesTable__IconCollapsible>
        <DuplicateButton
          data-test="btn-duplicate-questionnaire"
          disabled={false}
          onClick={[Function]}
        />
        <IconButtonDelete
          data-test="btn-delete-questionnaire"
          disabled={false}
          hideText={true}
          onClick={[Function]}
        />
      </QuestionnairesTable__IconCollapsible>
    </QuestionnairesTable__TD>
  </QuestionnairesTable__TR>
</QuestionnairesTable__RowTransition>
`;

exports[`QuestionnairesTable Row should render as disabled when the id is a duplicate 1`] = `
<QuestionnairesTable__RowTransition
  exit={false}
  key="dupe-2"
  timeout={200}
>
  <QuestionnairesTable__TR
    disabled={true}
  >
    <QuestionnairesTable__TD
      textAlign="left"
    >
      <QuestionnairesTable__Collapsible>
        <TruncatedQuestionnaireLink
          data-test="anchor-questionnaire-title"
          disabled={true}
          questionnaire={
            Object {
              "createdAt": "2017/01/02",
              "createdBy": Object {
                "name": "Alan",
              },
              "id": "dupe-2",
              "sections": Array [
                Object {
                  "id": "1",
                  "pages": Array [
                    Object {
                      "id": "1",
                    },
                  ],
                },
              ],
              "title": "Foo",
            }
          }
          title="Foo"
        >
          Foo
        </TruncatedQuestionnaireLink>
      </QuestionnairesTable__Collapsible>
    </QuestionnairesTable__TD>
    <QuestionnairesTable__TD
      textAlign="left"
    >
      <QuestionnairesTable__Collapsible>
        <FormattedDate
          date="2017/01/02"
        />
      </QuestionnairesTable__Collapsible>
    </QuestionnairesTable__TD>
    <QuestionnairesTable__TD
      textAlign="left"
    >
      <QuestionnairesTable__Collapsible>
        <Truncated>
          Alan
        </Truncated>
      </QuestionnairesTable__Collapsible>
    </QuestionnairesTable__TD>
    <QuestionnairesTable__TD
      textAlign="center"
    >
      <QuestionnairesTable__IconCollapsible>
        <DuplicateButton
          data-test="btn-duplicate-questionnaire"
          disabled={true}
          onClick={[Function]}
        />
        <IconButtonDelete
          data-test="btn-delete-questionnaire"
          disabled={true}
          hideText={true}
          onClick={[Function]}
        />
      </QuestionnairesTable__IconCollapsible>
    </QuestionnairesTable__TD>
  </QuestionnairesTable__TR>
</QuestionnairesTable__RowTransition>
`;

exports[`QuestionnairesTable should render 1`] = `
<QuestionnairesTable__Table>
  <thead>
    <tr>
      <QuestionnairesTable__TH
        colWidth="50%"
      >
        Questionnaire name
      </QuestionnairesTable__TH>
      <QuestionnairesTable__TH
        colWidth="15%"
      >
        Date
      </QuestionnairesTable__TH>
      <QuestionnairesTable__TH
        colWidth="25%"
      >
        Created by
      </QuestionnairesTable__TH>
      <QuestionnairesTable__TH
        colWidth="10%"
      />
    </tr>
  </thead>
  <TransitionGroup
    childFactory={[Function]}
    component={[Function]}
    enter={false}
  >
    <Row
      key="1"
      onDeleteQuestionnaire={[MockFunction]}
      onDuplicateQuestionnaire={[MockFunction]}
      questionnaire={
        Object {
          "createdAt": "2017/01/02",
          "createdBy": Object {
            "name": "Alan",
          },
          "id": "1",
          "sections": Array [
            Object {
              "id": "1",
              "pages": Array [
                Object {
                  "id": "1",
                },
              ],
            },
          ],
          "title": "Foo",
        }
      }
    />
    <Row
      key="2"
      onDeleteQuestionnaire={[MockFunction]}
      onDuplicateQuestionnaire={[MockFunction]}
      questionnaire={
        Object {
          "createdAt": "2017/03/04",
          "createdBy": Object {
            "name": "Lynn",
          },
          "id": "2",
          "sections": Array [
            Object {
              "id": "2",
              "pages": Array [
                Object {
                  "id": "2",
                },
              ],
            },
          ],
          "title": "Bar",
        }
      }
    />
  </TransitionGroup>
</QuestionnairesTable__Table>
`;

exports[`QuestionnairesTable should render message when no questionnaires 1`] = `
<p>
  You have no questionnaires
</p>
`;
